tests-integration/tests/roundtrip/invalid/semantic/duplicate_var_declaration/02/duplicate_var_declaration_02.essence
letting x, x be 0
letting x be false
such that x = 1